--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div>
         <div>
-          <a href="" style="width: 20px; display: flex;"><img src="./images/icon-cart.svg" alt=""><sup></sup></a>
+          <a href="" style="width: 20px; display: flex;"><img src="./images/icon-cart.svg" alt=""><sup id="supele"></sup></a>
         </div>
         <img src="./images/image-avatar.png" alt="">
       </div>
@@ -126,6 +126,48 @@
       <span id="s_block"><img src="https://cdn-icons-png.flaticon.com/128/1/1766.png" alt=""></span>
 
     </section>
+
+    <section id="section3">
+      <img src="./images/x-button.png" alt="" class="cross">
+
+      <div style=" display: flex; justify-content: space-between;">
+        <img src="./images/image-product-1.jpg" alt="" id="finalimg">
+        <div style="display: flex; flex-direction: column; justify-content: space-evenly; align-items: center;">
+          <h1 style="width: fit-content;">Fall Limited Edition Sneakers</h1>
+          <div style="display: flex; justify-content: space-between; align-items: center;">
+            <label for="NoItems" style="width: fit-content;">Quantity</label>
+            <select name="" id="NoItems">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+            </select>
+          </div>
+          <div>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <p style="width: fit-content;">Item charge</p>
+              <p  style="width: fit-content;"><span>$ 125</span>*<span id="quantity"></span></p>
+            </div>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <p style="width: fit-content;">Delivery charge</p>
+              <p id="deliverycharges"  style="width: fit-content;">$ 30</p>
+            </div>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <p style="width: fit-content; font-weight: bold;">Total Cost</p>
+              <p id="totalcharges" style="width: fit-content; font-weight: bold;"></p>
+            </div>
+          </div>
+          <button id="placeorder">Place Order</button>
+        </div>
+      </div>
+    </section>
+
+    
   </main>
   
   
