--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
     @media only screen and (max-width:360px){
-      .attribution { padding:10px; font-size: 13px; position: absolute; bottom: -200px; left: 0px; right: 0px; background-color: rgba(0, 255, 255, 0);}
+      .attribution { padding: 12px; font-size: 13px; position: absolute; bottom: -100px; left: 0px; right: 0px; background-color: rgba(0, 255, 255, 0);}
     }
   </style>
 </head>
@@ -47,7 +47,7 @@
       </div>
       <div>
         <div>
-          <a href="" style="width: 20px; display: flex;"><img src="./images/icon-cart.svg" alt=""><sup id="supele"></sup></a>
+          <a href="" style="width: 20px; display: flex;" id="cart"><img src="./images/icon-cart.svg" alt=""><sup id="supele"></sup></a>
         </div>
         <img src="./images/image-avatar.png" alt="">
       </div>
@@ -127,6 +127,7 @@
 
     </section>
 
+
     <section id="section3">
       <img src="./images/x-button.png" alt="" class="cross">
 
@@ -167,7 +168,6 @@
       </div>
     </section>
 
-    
   </main>
   
   
