--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
     @media only screen and (max-width:360px){
-      .attribution { padding: 12px; font-size: 13px; position: absolute; bottom: -100px; left: 0px; right: 0px; background-color: rgba(0, 255, 255, 0);}
+      .attribution { font-size: 13px; position: absolute; bottom: -10px; left: 0px; right: 0px; background-color: rgba(0, 255, 255, 0);}
     }
   </style>
 </head>
